# younggeul

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  codeql.yml  data-pipeline.yml  deploy-docs.yml  diagnose-molit.yml  lint.yml  nightly-eval.yml  release.yml  simulation.yml  test.yml
apps/kr-seoul-apartment/eval_cases/: gangnam_2round_bull.yaml  gangnam_5round_stress.yaml  seocho_0round_baseline.yaml
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/: cli.py  forecaster.py  pipeline.py  pipeline_live.py  runtime_version.py  snapshot.py
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/canonical/: regions.py
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/connectors/: bok.py  client_factory.py  kostat.py  molit.py
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/simulation/: __init__.py  event_store.py  events.py  graph.py  graph_state.py  metrics.py  shadow_runner.py  tracing.py
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/simulation/adapters/: filesystem_snapshot_reader.py
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/simulation/domain/: gu_resolver.py
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/simulation/evidence/: __init__.py  (+1 more)
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/transforms/: __init__.py  gold_district.py  gold_enrichment.py  silver_apt.py  silver_macro.py
apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment/web/: app.py  config.py  middleware.py  run_store.py  services.py  submission_control.py
apps/kr-seoul-apartment/tests/eval/: conftest.py  test_eval_contracts.py  test_eval_robustness.py  test_eval_smoke.py
apps/kr-seoul-apartment/tests/integration/: test_chain_e2e.py  test_live_ingest.py  test_report_pipeline_e2e.py  test_simulate_cli_shadow_audit.py  test_simulate_cli_with_snapshot.py
apps/kr-seoul-apartment/tests/unit/: test_bok.py  test_canonical_regions.py  test_citation_gate_node.py  test_cli.py  test_cli_render_flag.py  test_client_factory.py  test_config.py  test_continue_gate.py  test_event_store.py  test_evidence_builder.py  test_evidence_store.py  test_filesystem_snapshot_reader.py  test_forecaster.py  test_gold_district.py  test_gold_enrichment.py  test_graph.py  test_graph_state.py  test_intake_planner.py  test_kostat.py  test_litellm_adapter.py  test_metrics.py  test_molit.py  test_pipeline_live.py  test_policies.py  test_pure_resolve_round.py  test_replay_engine.py  test_report_renderer.py  test_report_writer.py  test_round_resolver.py  test_round_schemas.py  test_round_summarizer.py  test_run_store.py  test_silver_apt.py  test_silver_macro.py  test_snapshot.py  test_submission_control.py  test_tracing.py  test_web_app.py  test_web_middleware.py  test_web_pages.py  (+2 more)
benchmarks/kr-housing/: README.md
benchmarks/kr-housing/src/: benchmark_schema.py
benchmarks/kr-housing/tests/: test_benchmark_schema.py
core/src/younggeul_core/_compat/: __init__.py  data.py  ids.py  reporting.py  scenario.py
core/src/younggeul_core/connectors/: __init__.py  hashing.py  manifest.py  protocol.py  rate_limit.py  retry.py
core/src/younggeul_core/evidence/: __init__.py  schemas.py  sql.py
core/src/younggeul_core/state/: __init__.py  gold.py  silver.py  simulation.py
core/src/younggeul_core/storage/: snapshot.py
core/tests/contract/: test_compat_data_aliases.py  test_compat_guardrails.py  test_compat_hashing_parity.py  test_compat_ids.py  test_compat_reporting.py  test_compat_scenario.py  test_cross_schema.py  test_evidence_schema.py  test_gold_schema.py  test_silver_schema.py  test_simulation_schema.py
core/tests/unit/: test_hashing.py  test_manifest.py  test_protocol.py  test_rate_limit.py  test_retry.py
docs/: PRD.md  api-audit.md  development-history.md  index.md  observability.md  release-notes.md  web-ui.md
docs/adr/: 007-kpubdata-live-ingest.md  008-kostat-live-activation.md  009-github-models-llm.md  010-data-pipeline-live-workflow.md  011-simulate-live-snapshot-wiring.md  012-abdp-backed-core.md  013-default-all-seoul-districts.md
docs/api/: app-cli.md  app-connectors.md  app-pipeline.md  app-simulation.md  app-transforms.md  core-connectors.md  core-evidence.md  core-state.md  core-storage.md  index.md
docs/architecture/: abdp-simulation-fit-gap.md  data-plane.md  overview.md  reporting.md  simulation-plane.md
docs/getting-started/: demo.md  installation.md  quickstart.md
docs/guide/: cli.md  data-pipeline.md  evaluation.md  simulation.md
docs/tutorials/: add-connector.md  add-node.md
infra/: otel-collector-config.yaml  prometheus.yml
infra/grafana/provisioning/alerting/: alerts.yaml
infra/grafana/provisioning/dashboards/: dashboards.yaml  simulation-overview.json
scripts/: audit_docstrings.py  demo.sh  run_eval.py  smoke_kpubdata.py
(+22 files in other folders)
