[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "younggeul"
version = "0.1.0"
description = "YOLO Mortgage Simulator monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.3.2",
  "pydantic>=2.0",
  "langgraph>=0.6,<0.7",
  "litellm",
  "opentelemetry-api",
  "opentelemetry-sdk",
]

[project.scripts]
younggeul = "younggeul_app_kr_seoul_apartment.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pyyaml",
  "ruff",
  "mypy",
  "pre-commit",
  "pandas-stubs",
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "jinja2>=3.1",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
web = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "jinja2>=3.1",
]
observability = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
kr-seoul-apartment = [
  "PublicDataReader>=1.1",
  "pandas>=2.0",
]
docs = [
  "mkdocs-material>=9.0",
  "mkdocs>=1.5",
  "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = [
  "core/src/younggeul_core",
  "apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["core.*"]
strict = true

[[tool.mypy.overrides]]
module = ["PublicDataReader", "PublicDataReader.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
  "core/tests",
  "apps/kr-seoul-apartment/tests",
]
pythonpath = [
  "core/src",
  "apps/kr-seoul-apartment/src",
  "benchmarks/kr-housing/src",
]
markers = [
  "slow: marks tests as slow",
  "integration: marks integration tests",
  "eval: marks evaluation tests (simulation quality, regression)",
]
