[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "younggeul"
version = "0.3.0"
description = "YOLO Mortgage Simulator monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.0",
  "pydantic>=2.0",
  "langgraph>=0.6,<1.2",
  "litellm",
  "opentelemetry-api",
  "opentelemetry-sdk",
]

[project.scripts]
younggeul = "younggeul_app_kr_seoul_apartment.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pyyaml",
  "ruff",
  "mypy",
  "pre-commit",
  "pandas-stubs",
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "jinja2>=3.1",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
web = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "jinja2>=3.1",
]
observability = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
kr-seoul-apartment = [
  # `[xml]` pulls xmltodict; without it MolitAptConnector silently returns 0 rows. See #260.
  "kpubdata[xml]>=0.2.3",
  "pandas>=2.0",
]
docs = [
  "mkdocs-material>=9.0",
  "mkdocs>=1.5",
  "mkdocstrings[python]>=0.25",
]
# abdp backend (Adapter Layer; see ADR-012). Optional extra so the default
# install keeps working with the local backend. Pinned to a specific commit
# on abdp main (post-yeongseon/agent-based-decision-pipeline#163) where
# `abdp.__version__` correctly reports "0.3.0".
abdp = [
  "abdp @ git+https://github.com/yeongseon/agent-based-decision-pipeline.git@e695ea664926680fe456e5b409f46b39080aa40b",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "core/src/younggeul_core",
  "apps/kr-seoul-apartment/src/younggeul_app_kr_seoul_apartment",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["core.*"]
strict = true

[[tool.mypy.overrides]]
module = ["kpubdata", "kpubdata.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["abdp", "abdp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
  "core/tests",
  "apps/kr-seoul-apartment/tests",
]
pythonpath = [
  "core/src",
  "apps/kr-seoul-apartment/src",
  "benchmarks/kr-housing/src",
]
markers = [
  "slow: marks tests as slow",
  "integration: marks integration tests",
  "eval: marks evaluation tests (simulation quality, regression)",
  "live: marks tests that hit live external APIs (gated by env vars)",
]
